[gd_scene load_steps=11 format=3 uid="uid://knmtwmx8obbn"]

[ext_resource type="PackedScene" uid="uid://crv0ggn8hmrto" path="res://Entities/Player/Player.tscn" id="1_plohb"]
[ext_resource type="PackedScene" uid="uid://dvks5afcoduu4" path="res://Worlds/Dungeons/Cave/Procedural_Cave_1.tscn" id="1_v1qtl"]
[ext_resource type="PackedScene" uid="uid://bbvw681yvkiqo" path="res://Entities/Weapons/FullAutoRifle1.tscn" id="3_gwb3g"]
[ext_resource type="PackedScene" uid="uid://csjybje6odqws" path="res://Assets/Models/Equipment/Boots/Boots_Basic.tscn" id="4_pd8yl"]
[ext_resource type="Script" path="res://Systems/Inventory/LootTables.gd" id="6_4xepx"]
[ext_resource type="Script" path="res://Systems/Inventory/LootManager.gd" id="6_8dcuv"]
[ext_resource type="Script" path="res://Systems/Items/ItemDatabase.gd" id="7_ix31x"]
[ext_resource type="Script" path="res://Systems/Inventory/Inventory.gd" id="7_rkfhg"]
[ext_resource type="PackedScene" uid="uid://dalth6p36oih8" path="res://UI/InventoryUI.tscn" id="10_12dq0"]
[ext_resource type="Script" path="res://UI/UIManager.gd" id="10_kow50"]

[node name="Game" type="Node3D"]

[node name="DungeonGridMap" parent="." instance=ExtResource("1_v1qtl")]

[node name="Player" parent="." instance=ExtResource("1_plohb")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0.2, -2)

[node name="FullAutoRifle1" parent="Player" instance=ExtResource("3_gwb3g")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.5, 0.369596)

[node name="Boots_Basic" parent="Player" instance=ExtResource("4_pd8yl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.185608, 0.0076858, 0.0771356)

[node name="LootManager" type="Node" parent="." groups=["loot_manager"]]
script = ExtResource("6_8dcuv")

[node name="LootTables" type="Node" parent="." groups=["loot_tables"]]
script = ExtResource("6_4xepx")

[node name="ItemDatabase" type="Node" parent="." groups=["item_database"]]
script = ExtResource("7_ix31x")

[node name="Inventory" type="Node" parent="." groups=["inventory"]]
script = ExtResource("7_rkfhg")

[node name="UIManager" type="CanvasLayer" parent="."]
script = ExtResource("10_kow50")

[node name="InventoryUI" parent="UIManager" instance=ExtResource("10_12dq0")]
visible = false
